--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,13 @@
-[workspace]
+[package]
+name = "sec-data-parser"
+version = "0.1.0"
+authors = ["Paul Butler <paulgb@gmail.com>"]
+edition = "2018"
 
-members = [
-    "nc-cli",
-    "sec-data-parser"
-]
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+chrono = {version="0.4.19", features=["serde"]}
+num-traits = "0.2.14"
+serde = { version = "1.0.126", features = ["derive"] }
+uuencode = "0.1.5"
